--- a/ToDoApp/src/main/webapp/WEB-INF/web.xml
+++ b/ToDoApp/src/main/webapp/WEB-INF/web.xml
@@ -16,5 +16,8 @@
         <url-pattern>/</url-pattern>
     </servlet-mapping>
     
+    <listener>
+    	<listener-class>com.l.MyListener</listener-class>
     
+    </listener>
 </web-app>
